--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            <div id="inner">
                <article class="lg:prose-xl">
                    <h2 class="text-3xl font-bold">ChangYed top domain list</h2>
-                   <img src="/คาสิโนออนไลน์.png" alt="domain pnckdevapp" width="100%" height="100%" />
+                   <img src="/domain-pnckdevapp/คาสิโนออนไลน์.png" alt="domain pnckdevapp" width="100%" height="100%" />
                    <div class="text-sm breadcrumbs">
                        <ul>
                            <li>
