--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.39.1/dist/full.css" rel="stylesheet" type="text/css" />
    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+   <meta name="google-site-verification" content="ZCdoG7LYFone4KME-zn_KKkUDB_cZ0CTvRYVbjkcW5M" />
 </head>
 
 <body class="px-40">
